Add localForage for store token.

--- a/ngblog/app/views/header.html
+++ b/ngblog/app/views/header.html
@@ -1,6 +1,6 @@
 <div class="posts-head hidden-xs">
   <div class="posts-logo">
-    <img src="images/logo.png">
+    <a href="/#/"><img src="images/logo.png"></a>
   </div>
   <div class="posts-blog">
     <a ng-href="/#/posts">BLOG</a>
