--- a/ngblog/app/views/admin_new_post.html
+++ b/ngblog/app/views/admin_new_post.html
@@ -107,15 +107,43 @@
 .pull-left {
   width: auto;
 }
+
+.pre-image {
+  width: 50%;
+}
+
+.pre-image img {
+  width: 100%;
+  heigth: 100%;
+}
+
+.btn-group {
+  width: 100%;
+  margin: 20px 0 50px 0;
+}
+
+.btn-box {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  padding-left: 5%;
+}
+
+.btn-box .btn {
+  width: 100%;
+  background: #66afe9;
+  color: #ffffff;
+  font-size: 24px;
+}
 </style>
   <div class="col-md-1 left-side left-box">
     <ul>
       <li><a href="#" style="position: relative;"><img src="/images/yeoman.png" class="img-circle img-responsive"><span class="badge" style="position: absolute; top: 15px; left: 3px; background-color: #fd4e3e; color: #fff;border-radius: 50%;">30</span></a></li>
-      <li class="nav-acitves nav-item"><a href="#"><span class="glyphicon glyphicon-dashboard" style="color: #fd4e3e;"></span>所有文章</a></li>
-      <li class="nav-item"><a href="#"><span class="glyphicon glyphicon-align-justify"></span>添加文章</a></li>
-      <li class="nav-item"><a href="#"><span class="glyphicon glyphicon-th"></span>添加用户</a></li>
+      <li class="nav-acitves nav-item"><a href="#"><span class="glyphicon glyphicon-book" style="color: #fd4e3e;"></span>所有文章</a></li>
+      <li class="nav-item"><a href="#"><span class="glyphicon glyphicon-file"></span>添加文章</a></li>
+      <li class="nav-item"><a href="#"><span class="glyphicon glyphicon-user"></span>添加用户</a></li>
       <li class="nav-item"><a href="#"><span class="glyphicon glyphicon-th"></span>用户管理</a></li>
-      <li class="user-out"><a href="#"><span class="glyphicon glyphicon-th"></span>退出</a></li>
+      <li class="user-out"><a ng-click="userOut()" href="javascript:void(0)"><span class="glyphicon glyphicon-share-alt"></span>退出</a></li>
     </ul>
   </div>
 <div class="col-md-11 right-side right-box">
@@ -145,11 +173,11 @@
         <textarea ng-model="post.summary" rows="6" class="form-control" required></textarea>
       </div>
     </div>
-    <div class="form-group">
-      <label for="img" class="col-md-2 control-label">图片</label>
-      <div class="col-md-10">
+    <div class="form-group upload-image">
+      <label for="img" class="col-md-1 control-label">图片</label>
+      <div class="col-md-11">
         <input type="file" nv-file-select uploader="uploader"/><br/>
-        <div>
+        <div class="pre-image">
           <p>预览</p>
           <p><img src="{{post.img}}" alt="请上传图片" /></p>
         </div>
@@ -202,8 +230,10 @@
         </div>
       </div>
     </div>
-    <div class="btn-group col-md-6 col-md-offset-6">
-      <button type="submit" class="btn btn-lg btn-default">提交</button>
+    <div class="btn-group">
+      <div class="btn-box">
+        <button type="submit" class="btn btn-lg btn-save">提交</button>
+      </div>
     </div>
   </form>
 </div>
