--- a/ngblog/app/views/admin_head.html
+++ b/ngblog/app/views/admin_head.html
@@ -1,4 +1,16 @@
 <style>
+.container {
+  background-color: #272d33;
+}
+.right-box {
+  float: right;
+}
+.right-side {
+  background-color: #fff;
+}
+.table-responsive {
+  min-height: 538px;
+}
 .right-side .well {
   margin: 0 -15px;
   border-radius: 0;
