--- a/ngblog/app/views/admin_new_post.html
+++ b/ngblog/app/views/admin_new_post.html
@@ -70,6 +70,8 @@
   font-size: 24px;
 }
 </style>
+<ng-include src="'views/admin_left.html'"></ng-include>
+<ng-include src="'views/admin_head.html'"></ng-include>
 <div class="col-md-11 right-side right-box">
   <form ng-submit="addPost()" class="form-horizontal col-md-12 add-article">
     <div class="form-group">
