--- a/ngblog/app/views/admin_posts.html
+++ b/ngblog/app/views/admin_posts.html
@@ -1,28 +1,30 @@
+<ng-include src="'views/admin_left.html'"></ng-include>
+<ng-include src="'views/admin_head.html'"></ng-include>
 <div class="col-md-11 right-side right-box">
   <div class="table-responsive">
     <table class="table table-hover">
       <thead>
         <tr>
-  				<th>ID</th>
-  				<th>标题</th>
-  				<th>作者</th>
-  				<th>操作</th>
+    			<th>ID</th>
+    			<th>标题</th>
+    			<th>作者</th>
+    			<th>操作</th>
         </tr>
       </thead>
       <tbody>
-  			<tr ng-repeat="p in posts">
-  				<td>{{p.id}}</td>
-  				<td>{{p.title}}</td>
-  				<td>{{p.author}}</td>
-  				<td>
+    		<tr ng-repeat="p in posts">
+    			<td>{{p.id}}</td>
+    			<td>{{p.title}}</td>
+    			<td>{{p.author}}</td>
+    			<td>
             <a class="btn btn-primary" href="#/admin/posts/{{p.id}}">编辑</a>
             <button type="button" class="btn btn-success" ng-click="delPost(p.id)">删除</button>
           </td>
-  			</tr>
-  		</tbody>
+    		</tr>
+    	</tbody>
     </table>
   </div>
   <div>
-    <pagination total-items="bigTotalItems" ng-model="$parent.bigCurrentPage" max-size="maxSize" items-per-page="itemsPerPage" class="pagination-xm" ng-change="pageChanged()" boundary-links="true"></pagination>
+    <pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" items-per-page="itemsPerPage" class="pagination-xm" ng-change="pageChanged()" boundary-links="true"></pagination>
   </div>
-<div>
+</div>
