--- a/ngblog/app/views/admin_posts.html
+++ b/ngblog/app/views/admin_posts.html
@@ -1,5 +1,5 @@
 <ng-include src="'views/admin_left.html'"></ng-include>
-<ng-include src="'views/admin_head.html'"></ng-include>
+<breadcrumbs></breadcrumbs>
 <div class="col-md-11 right-side right-box">
   <div class="table-responsive">
     <table class="table table-hover">
