--- a/ngblog/app/views/admin_new_post.html
+++ b/ngblog/app/views/admin_new_post.html
@@ -71,8 +71,7 @@
 }
 </style>
 <ng-include src="'views/admin_left.html'"></ng-include>
-<ng-include src="'views/admin_head.html'"></ng-include>
-<my-dialog ng-hide="dialogIsHidden" on-close="hideDialog(message)">
+<breadcrumbs></breadcrumbs>
   <div class="col-md-11 right-side right-box">
     <form ng-submit="addPost()" class="form-horizontal col-md-12 add-article">
       <div class="form-group">
@@ -157,7 +156,6 @@
       </div>
     </form>
   </div>
-</my-dialog>
 
 
 <script src="/vendor/ueditor/ueditor.config.js"></script>
