--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -847,3 +847,46 @@ ul, li {
   }
 }
 /* admin breadcrumbs css end */
+
+/* admin nav menu css start */
+.left-side {
+  text-align: center;
+  a {
+    color: #f5f5f5;
+  }
+  .nav-acitves {
+    border-left: 2px solid #d84b3a;
+    color: #d84b3a;
+    a {
+      color: #fff;
+      span {
+        color: #d84b3a;
+      }
+    }
+  }
+  ul {
+    padding-top: 20px;
+  }
+
+  ul > span {
+    color: #5a5a5a;
+    font-size: 20px;
+    margin: 10px auto;
+  }
+
+  li > a > span {
+    display: block;
+  }
+}
+
+.left-box {
+  position: fixed;
+  .nav-item {
+    margin-top: 20px;
+  }
+  .user-out {
+    margin-top: 280px;
+  }
+}
+
+/* admin nav menu css end */
