Add marked.js to verdor and remove none use js library.

--- a/ngblog/app/views/admin_edit_post.html
+++ b/ngblog/app/views/admin_edit_post.html
@@ -126,6 +126,7 @@
 <script src="/vendor/ueditor/ueditor.all.js"></script>
 
 <script src="/vendor/ace/src/ace.js"></script>
+<script src="/vendor/marked.js"></script>
 <link rel="stylesheet" href="/vendor/highlight/styles/default.css">
 <script src="/vendor/highlight/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
