fix the img src in the article list pages

--- a/ngblog/app/views/posts.html
+++ b/ngblog/app/views/posts.html
@@ -12,7 +12,7 @@
           </div>
           <div class="post-picture">
             <div class="post-picture-box">
-              <img class="image" ng-src="{{p.img.url}}">
+              <img class="image" ng-src="{{p.img}}">
             </div>
             <span>{{p.publish_time.substr(0,10)}}</span>
             <img src="/images/post-ico.png">
