fixed admin nav bug
修复了后台导航栏的bug

--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -806,6 +806,15 @@ search_posts.html
   outline: none;
 }
 
+.ico-acitve {
+  color: #fd4e3e;
+}
+
+.left-box {
+  background: #494949;
+  height: 100%;
+}
+
 ::-webkit-input-placeholder{
    color: rgba(255,255,255,0.6);
 }
