--- a/ngblog/app/views/admin_posts.html
+++ b/ngblog/app/views/admin_posts.html
@@ -1,4 +1,4 @@
-<ng-include src="'views/admin_left.html'"></ng-include>
+<navmenu></navmenu>
 <breadcrumbs></breadcrumbs>
 <div class="col-md-11 right-side right-box">
   <div class="table-responsive">
