--- a/ngblog/app/views/admin_edit_post.html
+++ b/ngblog/app/views/admin_edit_post.html
@@ -38,89 +38,126 @@
   margin-right: 6px;
   padding: 0 5px;
 }
+
+.pre-image {
+  width: 50%;
+}
+
+.pre-image img {
+  width: 100%;
+  heigth: 100%;
+}
+
+.btn-group {
+  width: 100%;
+  margin: 20px 0 50px 0;
+}
+
+.btn-box {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  padding-left: 5%;
+}
+
+.btn-box .btn {
+  width: 100%;
+  background: #66afe9;
+  color: #ffffff;
+  font-size: 24px;
+}
+
+.edit-post-box {
+  margin-top: 50px
+}
 </style>
 
-<h1>编辑文章</h1>
-<form ng-submit="updatePost(post.id)" class="form-horizontal col-md-12">
-  <div class="form-group">
-    <label for="title" class="col-md-2 control-label">标题</label>
-    <div class="col-md-10">
-      <input type="text" ng-model="post.title" class="form-control" required>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="author" class="col-md-2 control-label">作者</label>
-    <div class="col-md-10">
-      <input type="text" ng-model="post.author" class="form-control" required>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="summary" class="col-md-2 control-label">摘要</label>
-    <div class="col-md-10">
-      <textarea ng-model="post.summary" rows="10" class="form-control" required></textarea>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="image" class="col-md-2 control-label">图片</label>
-    <div class="col-md-10">
-      <input type="file" nv-file-select uploader="uploader"/><br/>
-      <div>
-        <p>预览</p>
-        <p><img src="{{post.img}}" alt="请上传图片" /></p>
+<navmenu></navmenu>
+<breadcrumbs></breadcrumbs>
+<div class="col-md-11 right-side right-box edit-post-box">
+  <form ng-submit="updatePost(post.id)" class="form-horizontal col-md-12">
+    <div class="form-group">
+      <label for="title" class="col-md-1 control-label">标题</label>
+      <div class="col-md-11">
+        <input type="text" ng-model="post.title" class="form-control" required>
       </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="content" class="col-md-2 control-label">内容</label>
-    <div class="col-md-10">
-      <tabset justified="true">
-        <tab heading="富文本编辑器">
-          <textarea ueditor ng-model="post.content"></textarea>
-        </tab>
-        <tab heading="markdown语法">
-          <div nclass="form-control" id="markdown">
-            <div id="editor-tool-bar">
-              <span><a class="m-pill" href="http://wowubuntu.com/markdown/" target="_blank">语法参考</a></span>
-              <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span>
-            </div>
-            <div id="editor" ng-model="post.markdown" ace></div>
-            <div id="result" ng-bind-html="markdown(post.markdown)"></div>
-          </div>
-        </tab>
-      </tabset>
+    <div class="form-group">
+      <label for="author" class="col-md-1 control-label">作者</label>
+      <div class="col-md-11">
+        <input type="text" ng-model="post.author" class="form-control" required>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="content" class="col-md-2 control-label">标签</label>
-    <div class="col-md-10 tags">
-      <tags-input ng-model="post.tags">
-        <auto-complete source="loadTags($query)"></auto-complete>
-      </tags-input>
+    <div class="form-group">
+      <label for="summary" class="col-md-1 control-label">摘要</label>
+      <div class="col-md-11">
+        <textarea ng-model="post.summary" rows="10" class="form-control" required></textarea>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-md-10 col-md-offset-2">
-      <label ng-click="isCollapsed = !isCollapsed">
-        <span ng-class="{true: 'glyphicon glyphicon-chevron-down', false: 'glyphicon glyphicon-chevron-up'}[isCollapsed]"></span> 高级设置</label>
-      <div collapse="isCollapsed">
+    <div class="form-group">
+      <label for="image" class="col-md-1 control-label">图片</label>
+      <div class="col-md-11">
+        <input type="file" nv-file-select uploader="uploader"/><br/>
         <div>
-          <label class="checkbox-inline">
-            <input type="checkbox" ng-model="post.is_recommend" value=""> 推荐
-          </label>
-          <label class="checkbox-inline">
-            <input type="checkbox" ng-model="post.can_comment" value=""> 允许评论
-          </label>
-          <label class="checkbox-inline">
-            <input type="checkbox" ng-model="post.is_published" value=""> 推荐
-          </label>
+          <p>预览</p>
+          <p><img src="{{post.img}}" alt="请上传图片" /></p>
         </div>
       </div>
     </div>
-  </div>
-  <div class="btn-group col-md-12 col-md-offset-6">
-    <button type="submit" class="btn btn-lg btn-default">更新</button>
-  </div>
-</form>
+    <div class="form-group">
+      <label for="content" class="col-md-1 control-label">内容</label>
+      <div class="col-md-11">
+        <tabset justified="true">
+          <tab heading="富文本编辑器">
+            <textarea ueditor ng-model="post.content"></textarea>
+          </tab>
+          <tab heading="markdown语法">
+            <div nclass="form-control" id="markdown">
+              <div id="editor-tool-bar">
+                <span><a class="m-pill" href="http://wowubuntu.com/markdown/" target="_blank">语法参考</a></span>
+                <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span>
+              </div>
+              <div id="editor" ng-model="post.markdown" ace></div>
+              <div id="result" ng-bind-html="markdown(post.markdown)"></div>
+            </div>
+          </tab>
+        </tabset>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="content" class="col-md-1 control-label">标签</label>
+      <div class="col-md-11 tags">
+        <tags-input ng-model="post.tags">
+          <auto-complete source="loadTags($query)"></auto-complete>
+        </tags-input>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-11 col-md-offset-1">
+        <label ng-click="isCollapsed = !isCollapsed">
+          <span ng-class="{true: 'glyphicon glyphicon-chevron-down', false: 'glyphicon glyphicon-chevron-up'}[isCollapsed]"></span> 高级设置</label>
+        <div collapse="isCollapsed">
+          <div>
+            <label class="checkbox-inline">
+              <input type="checkbox" ng-model="post.is_recommend" value=""> 推荐
+            </label>
+            <label class="checkbox-inline">
+              <input type="checkbox" ng-model="post.can_comment" value=""> 允许评论
+            </label>
+            <label class="checkbox-inline">
+              <input type="checkbox" ng-model="post.is_published" value=""> 推荐
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="btn-group">
+      <div class="btn-box">
+        <button type="submit" class="btn btn-lg btn-save">更新</button>
+      </div>
+    </div>
+  </form>
+</div>
 
 <script src="/vendor/ueditor/ueditor.config.js"></script>
 <script src="/vendor/ueditor/ueditor.all.js"></script>
