--- a/ngblog/app/views/admin_edit_post.html
+++ b/ngblog/app/views/admin_edit_post.html
@@ -41,6 +41,7 @@
 
 .pre-image {
   width: 50%;
+  margin-bottom: 10px;
 }
 
 .pre-image img {
@@ -94,11 +95,11 @@
         <textarea ng-model="post.summary" rows="10" class="form-control" required></textarea>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group　upload-image">
       <label for="image" class="col-md-1 control-label">图片</label>
       <div class="col-md-11">
         <input type="file" nv-file-select uploader="uploader"/><br/>
-        <div>
+        <div class="pre-image">
           <p>预览</p>
           <p><img src="{{post.img}}" alt="请上传图片" /></p>
         </div>
