--- a/ngblog/app/views/posts.html
+++ b/ngblog/app/views/posts.html
@@ -8,7 +8,7 @@
         </div>
         <div class="post-text">
           <div class="post-inf">
-            <p>{{p.content}}</P>
+            <p ng-bind-html="p.content">{{p.content}}</P>
           </div>
           <div class="post-picture">
             <div class="post-picture-box">
