--- a/ngblog/app/views/show_post.html
+++ b/ngblog/app/views/show_post.html
@@ -7,7 +7,7 @@
     <div class="post-text">
       <div class="post-inf">
         <div class="post-picture">
-          <img class="image" ng-src="{{post.img.url}}">
+          <img class="image" ng-src="{{post.img}}">
         </div>
         <div class="post-content">
           <p ng-bind-html="post.content"></p>
