--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -348,7 +348,7 @@ a:hover,a:focus {
 
 }
 
-.posts-box .post-title {
+.posts-box .post-title-ba {
   position: absolute;
   width: 100%;
   height: 55px;
@@ -362,16 +362,21 @@ a:hover,a:focus {
   overflow: hidden;
   white-space: nowrap;
   font-size: 16px;
+}
 
+.posts-box .post-title {
+  width: 96.4%;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 
 .posts-box .post-text {
   position: absolute;
-  width: 96%;
+  width: 95.3%;
   height: 300px;
   border: 1px solid #ddd;
-  left: 4%;
+  left: 4.8%;
   z-index: 1;
   box-shadow: 5px 5px 5px #ddd;
 }
@@ -468,15 +473,16 @@ show_post.html
   background-repeat: no-repeat;
   background-size: 100% 100%;
   top: 10px;
-  left: -4%;
+  left: -4.8%;
   z-index: 2;
   padding: 10px 5%;
   color: #fff;
+  font-size: 16px;
 }
 
 .show-posts-box .post-text {
   float: left;
-  width: 96%;
+  width: 95.3%;
   border: 1px solid #ddd;
   box-shadow: 5px 5px 5px #ddd;
   margin-bottom: 20px;
@@ -606,6 +612,7 @@ search_posts.html
   width: 100%;
   background: #fff;
   margin-top: 20px;
+  min-height: 508px;
 }
 
 .search-posts-box .posts {
@@ -622,7 +629,7 @@ search_posts.html
 
 }
 
-.search-posts-box .post-title {
+.search-posts-box .post-title-ba {
   position: absolute;
   width: 100%;
   height: 55px;
@@ -633,22 +640,29 @@ search_posts.html
   z-index: 2;
   padding: 10px 5%;
   color: #fff;
+  font-size: 16px;
+}
+
+.search-posts-box .post-title {
+  width: 96.5%;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 
 .search-posts-box .post-text {
   position: absolute;
-  width: 96%;
+  width: 95.3%;
   height: 300px;
   border: 1px solid #ddd;
-  left: 4%;
+  left: 4.8%;
   z-index: 1;
   box-shadow: 5px 5px 5px #ddd;
 }
 
 .search-posts-box .post-inf {
   float: left;
-  height: 100%;
+  height: 98%;
   padding: 70px 0 0 10px;
   overflow: hidden;
   width: 60%;
@@ -680,7 +694,7 @@ search_posts.html
 
 .search-message {
   width: 100%;
-  height: 506px;
+  height: 528px;
   padding: 20px 20px;
   font-size: 20px;
   color: #72b2a8;
