--- a/ngblog/app/views/posts.html
+++ b/ngblog/app/views/posts.html
@@ -3,8 +3,8 @@
   <div class="posts">
     <div class="post-item" ng-repeat="p in posts">
       <a ng-href="#/posts/{{p.id}}">
-        <div class="post-title">
-          <span>{{p.title}}</span>
+        <div class="post-title-ba">
+          <div class="post-title"><span>{{p.title}}</span></div>
         </div>
         <div class="post-text">
           <div class="post-inf">
