--- a/ngblog/app/views/search_posts.html
+++ b/ngblog/app/views/search_posts.html
@@ -2,12 +2,12 @@
 <div class="search-message" ng-hide=messageMark>
   <span>没有搜到相关文章</span>
 </div>
-<div class="search-posts-box">
+<div class="search-posts-box" ng-show=messageMark>
   <div class="posts">
     <div class="post-item" ng-repeat="p in posts">
       <a ng-href="#/posts/{{p.id}}">
-        <div class="post-title">
-          <span>{{p.title}}</span>
+        <div class="post-title-ba">
+          <div class="post-title"><span>{{p.title}}</span></div>
         </div>
         <div class="post-text">
           <div class="post-inf">
@@ -15,7 +15,7 @@
           </div>
           <div class="post-picture">
             <div class="post-picture-box">
-              <img class="image" ng-src="{{p.img.url}}">
+              <img class="image" ng-src="{{p.img}}">
             </div>
             <span>{{p.publish_time.substr(0,10)}}</span>
             <img src="/images/post-ico.png">
