--- a/ngblog/app/views/directives/nav.html
+++ b/ngblog/app/views/directives/nav.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-1 left-side left-box">
   <ul>
-    <li><a href="#" style="position: relative;"><img src="/images/yeoman.png" class="img-circle img-responsive"><span class="badge" style="position: absolute; top: 15px; left: 3px; background-color: #fd4e3e; color: #fff;border-radius: 50%;">30</span></a></li>
+    <li><img src="/images/yeoman.png" class="img-circle img-responsive"></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.postsActive];"><a href="/#/admin/posts"><span class="glyphicon glyphicon-book ng-class: {true: 'ico-acitve', false: ''}[navacitves.postsActive];"></span>所有文章</a></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.newpostActive];"><a href="/#/admin/posts/new"><span class="glyphicon glyphicon-file ng-class: {true: 'ico-acitve', false: ''}[navacitves.newpostActive];"></span>添加文章</a></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.adduserActive];"><a href="#"><span class="glyphicon glyphicon-user ng-class: {true: 'ico-acitve', false: ''}[navacitves.adduserActive];"></span>添加用户</a></li>
