--- a/ngblog/app/views/show_post.html
+++ b/ngblog/app/views/show_post.html
@@ -6,7 +6,7 @@
     </div>
     <div class="post-text">
       <div class="post-inf">
-        <div class="post-picture">
+        <div class="post-picture" ng-show="imageMark">
           <img class="image" ng-src="{{post.img}}">
         </div>
         <div class="post-content">
