fixed picture bug
修复图片ｂｕｇ

--- a/ngblog/app/views/main.html
+++ b/ngblog/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="header hidden-xs">
   <div class="header-logo">
-    <img src="images/logo.png">
+    <img src="/images/logo.png">
   </div>
   <div class="header-nav">
     <div class="nav-blog">
@@ -43,7 +43,7 @@
   </div>
   <div class="main-company-box hidden-xs">
     <div class="main-two-code-pic">
-      <img src="images/two-code.jpg">
+      <img src="/images/two-code.jpg">
     </div>
     <div class="main-company-inf">
       <p><a>学壹传媒有限公司</a></p>
