--- a/ngblog/app/views/show_post.html
+++ b/ngblog/app/views/show_post.html
@@ -12,15 +12,13 @@
         <div class="post-content">
           <p ng-bind-html="post.content"></p>
         </div>
-        <div class="post-time">
-          <span>{{post.publish_time.substr(0,10)}}</span>
-          <img src="/images/post-ico.png">
-          <span>(
-            <span>500</span>)</span>
-        </div>
+        <dir-disqus disqus-shortname="thecampusblog"
+                 disqus-identifier="{{ identifier }}"
+                 disqus-url="{{ url }}">
+        </dir-disqus>
+      </div>
       </div>
     </div>
-  </div>
 </div>
 <div class="showpost-company-box">
   <div class="company">
