add the disqus function

--- a/ngblog/app/views/admin_edit_post.html
+++ b/ngblog/app/views/admin_edit_post.html
@@ -101,7 +101,7 @@
         <input type="file" nv-file-select uploader="uploader"/><br/>
         <div class="pre-image">
           <p>预览</p>
-          <p><img src="{{post.img}}" alt="请上传图片" /></p>
+          <p><img ng-src="{{post.img}}" alt="请上传图片" /></p>
         </div>
       </div>
     </div>
