--- a/ngblog/app/views/main.html
+++ b/ngblog/app/views/main.html
@@ -20,7 +20,7 @@
   <div class="main-post">
     <ul>
       <li ng-repeat="p in posts">
-        <div class="main-post-title"><a href="#/posts/{{p.id}}">{{p.title}}</a></div>
+        <div class="main-post-title"><a href="posts/{{p.id}}">{{p.title}}</a></div>
         <div class="main-post-inf">
           <img src="/images/post-ico.png">
           <span>(<span>500</span>)</span>
