--- a/ngblog/app/views/posts.html
+++ b/ngblog/app/views/posts.html
@@ -2,7 +2,7 @@
 <div class="posts-box">
   <div class="posts">
     <div class="post-item" ng-repeat="p in posts">
-      <a ng-href="#/posts/{{p.id}}">
+      <a ng-href="/posts/{{p.id}}">
         <div class="post-title-ba">
           <div class="post-title"><span>{{p.title}}</span></div>
         </div>
