--- a/ngblog/app/views/search_posts.html
+++ b/ngblog/app/views/search_posts.html
@@ -5,7 +5,7 @@
 <div class="search-posts-box" ng-show=messageMark>
   <div class="posts">
     <div class="post-item" ng-repeat="p in posts">
-      <a ng-href="#/posts/{{p.id}}">
+      <a ng-href="posts/{{p.id}}">
         <div class="post-title-ba">
           <div class="post-title"><span>{{p.title}}</span></div>
         </div>
