--- a/ngblog/app/views/show_post.html
+++ b/ngblog/app/views/show_post.html
@@ -12,9 +12,20 @@
         <div class="post-content">
           <p ng-bind-html="post.content"></p>
         </div>
-        <dir-disqus disqus-shortname="thecampusblog" disqus-identifier="{{ identifier }}"
-          disqus-url="{{ url }}">
-        </dir-disqus>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'thecampusblog'; // required: replace example with your forum shortname
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        
       </div>
       </div>
     </div>
@@ -41,7 +52,7 @@
       <div class="history-posts-list">
         <ul>
           <li ng-repeat="ps in posts">
-            <a ng-href="/posts/{{ps.id}}">{{ps.title}}</a>
+            <a ng-href="posts/{{ps.id}}">{{ps.title}}</a>
           </li>
         </ul>
       </div>
