--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -236,6 +236,7 @@ a:hover,a:focus {
     width: 40%;
     margin: 0;
     padding: 0;
+    min-height: 200px;
   }
 }
 
@@ -338,6 +339,7 @@ a:hover,a:focus {
   height: 100%;
   margin-left: 5%;
   float: left;
+  min-height: 400px;
 }
 
 .posts-box .post-item {
