--- a/ngblog/app/views/admin_posts.html
+++ b/ngblog/app/views/admin_posts.html
@@ -17,7 +17,7 @@
     			<td>{{p.title}}</td>
     			<td>{{p.author}}</td>
     			<td>
-            <a class="btn btn-primary" href="#/admin/posts/{{p.id}}">编辑</a>
+            <a class="btn btn-primary" href="/#/admin/posts/{{p.id}}">编辑</a>
             <button type="button" class="btn btn-success" ng-click="delPost(p.id)">删除</button>
           </td>
     		</tr>
