--- a/ngblog/app/views/posts.html
+++ b/ngblog/app/views/posts.html
@@ -8,7 +8,8 @@
         </div>
         <div class="post-text">
           <div class="post-inf">
-            <p ng-bind-html="p.content">{{p.content}}</P>
+            <p ng-bind-html="p.content" ng-if="p.markdown == null || p.markdown == ''"></p>
+            <p ng-bind-html="p.markdown" ng-if="p.content == null || p.content == ''"></p>
           </div>
           <div class="post-picture">
             <div class="post-picture-box">
