--- a/ngblog/app/views/directives/nav.html
+++ b/ngblog/app/views/directives/nav.html
@@ -4,8 +4,8 @@
     <li><img src="/images/yeoman.png" class="img-circle img-responsive"></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.postsActive];"><a href="/#/admin/posts"><span class="glyphicon glyphicon-book ng-class: {true: 'ico-acitve', false: ''}[navacitves.postsActive];"></span>所有文章</a></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.newpostActive];"><a href="/#/admin/posts/new"><span class="glyphicon glyphicon-file ng-class: {true: 'ico-acitve', false: ''}[navacitves.newpostActive];"></span>添加文章</a></li>
-    <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.adduserActive];"><a href="#"><span class="glyphicon glyphicon-user ng-class: {true: 'ico-acitve', false: ''}[navacitves.adduserActive];"></span>添加用户</a></li>
-    <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.usersActive];"><a href="#"><span class="glyphicon glyphicon-th ng-class: {true: 'ico-acitve', false: ''}[navacitves.usersActive];"></span>用户管理</a></li>
+    <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.adduserActive];"><a href="/#/admin/users/new"><span class="glyphicon glyphicon-user ng-class: {true: 'ico-acitve', false: ''}[navacitves.adduserActive];"></span>添加用户</a></li>
+    <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.usersActive];"><a href="/#/admin/users"><span class="glyphicon glyphicon-th ng-class: {true: 'ico-acitve', false: ''}[navacitves.usersActive];"></span>用户管理</a></li>
     <li class="user-out"><a ng-click="logout()" href="javascript:void(0)"><span class="glyphicon glyphicon-share-alt"></span>退出</a></li>
   </ul>
 </div>
