--- a/ngblog/app/views/admin_users.html
+++ b/ngblog/app/views/admin_users.html
@@ -5,23 +5,23 @@
     <table class="table table-hover">
       <thead>
         <tr>
-    			<th>ID</th>
-    			<th>标题</th>
-    			<th>作者</th>
-    			<th>操作</th>
+          <th>ID</th>
+          <th>用户名</th>
+          <th>邮箱</th>
+          <th>操作</th>
         </tr>
       </thead>
       <tbody>
-    		<tr ng-repeat="p in posts">
-    			<td>{{p.id}}</td>
-    			<td>{{p.title}}</td>
-    			<td>{{p.author}}</td>
-    			<td>
-            <a class="btn btn-primary" href="/#/admin/posts/{{p.id}}">编辑</a>
-            <button type="button" class="btn btn-success" ng-click="delPost(p.id)">删除</button>
+        <tr ng-repeat="u in users">
+          <td>{{u.id}}</td>
+          <td>{{u.name}}</td>
+          <td>{{u.email}}</td>
+          <td>
+            <a class="btn btn-primary" href="#/admin/users/{{u.id}}">编辑</a>
+            <button type="button" class="btn btn-success" ng-click="delUser(u.id)">删除</button>
           </td>
-    		</tr>
-    	</tbody>
+        </tr>
+      </tbody>
     </table>
   </div>
   <div>
