--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -29,7 +29,7 @@ body {
 .header {
   width: 100%;
   height: 350px;
-  background-image: url('/images/head-ba.png');
+  background: url('/images/head-ba.png');
   background-size: 100% 100%;
   background-repeat: no-repeat;
   position: relative;
@@ -44,9 +44,9 @@ body {
 .header-nav {
   width: 100%;
   height: 50px;
-  position: relative;
-  top: 50px;
-  z-index: 9999;
+  position: absolute;
+  top: 300px;
+  z-index: 1;
   background: #fff;
   opacity: 0.3;
   -moz-opacity: 0.3;
@@ -84,7 +84,7 @@ body {
   position: absolute;
   top: 305px;
   width: 35%;
-  z-index: 9999;
+  z-index: 2;
 }
 
 .nav-search input {
