changed index animate

--- a/ngblog/app/views/main.html
+++ b/ngblog/app/views/main.html
@@ -1,10 +1,10 @@
 <style>
   .logoanimate {
     position:relative;
-    animation:logo 3s;
-    -moz-animation:logo 3s; /* Firefox */
-    -webkit-animation:logo 3s; /* Safari and Chrome */
-    -o-animation:logo 3s; /* Opera */
+    animation:logo 1s;
+    -moz-animation:logo 1s; /* Firefox */
+    -webkit-animation:logo 1s; /* Safari and Chrome */
+    -o-animation:logo 1s; /* Opera */
     z-index: 9999;
   }
 
@@ -30,10 +30,10 @@
     }
   .backgroundanimate {
     position:relative;
-    animation:background 3s;
-    moz-animation:background 3s; /* Firefox */
-    -webkit-animation:background 3s; /* Safari and Chrome */
-    -o-animation:background 3s; /* Opera */
+    animation:background 1s;
+    moz-animation:background 1s; /* Firefox */
+    -webkit-animation:background 1s; /* Safari and Chrome */
+    -o-animation:background 1s; /* Opera */
   }
 
   @keyframes background
@@ -58,10 +58,10 @@
     }
   .navanimate {
     position:absolute;
-    animation:navanimate 3s;
-    moz-animation:navanimate 3s; /* Firefox */
-    -webkit-animation:navanimate 3s; /* Safari and Chrome */
-    -o-animation:navanimate 3s; /* Opera */
+    animation:navanimate 1s;
+    moz-animation:navanimate 1s; /* Firefox */
+    -webkit-animation:navanimate 1s; /* Safari and Chrome */
+    -o-animation:navanimate 1s; /* Opera */
   }
 
   @keyframes navanimate
@@ -86,10 +86,10 @@
     }
 
   .bloganimate {
-    animation:bloganimate 3s;
-    moz-animation:bloganimate 3s; /* Firefox */
-    -webkit-animation:bloganimate 3s; /* Safari and Chrome */
-    -o-animation:bloganimate 3s; /* Opera */
+    animation:bloganimate 1s;
+    moz-animation:bloganimate 1s; /* Firefox */
+    -webkit-animation:bloganimate 1s; /* Safari and Chrome */
+    -o-animation:bloganimate 1s; /* Opera */
   }
 
   @keyframes bloganimate
@@ -113,10 +113,10 @@
       to {height: 70px; font-size: 26px; color: #62a696; padding: 15px 0 15px 30%; width: 40%; border-right: 2px solid #d2d2d2;}
     }
     .photoanimate {
-      animation:photoanimate 3s;
-      moz-animation:photoanimate 3s; /* Firefox */
-      -webkit-animation:photoanimate 3s; /* Safari and Chrome */
-      -o-animation:photoanimate 3s; /* Opera */
+      animation:photoanimate 1s;
+      moz-animation:photoanimate 1s; /* Firefox */
+      -webkit-animation:photoanimate 1s; /* Safari and Chrome */
+      -o-animation:photoanimate 1s; /* Opera */
     }
 
     @keyframes photoanimate
@@ -142,10 +142,10 @@
 
   .searchanimate {
     position:absolute;
-    animation:searchanimate 3s;
-    moz-animation:searchanimate 3s; /* Firefox */
-    -webkit-animation:searchanimate 3s; /* Safari and Chrome */
-    -o-animation:searchanimate 3s; /* Opera */
+    animation:searchanimate 1s;
+    moz-animation:searchanimate 1s; /* Firefox */
+    -webkit-animation:searchanimate 1s; /* Safari and Chrome */
+    -o-animation:searchanimate 1s; /* Opera */
   }
 
   @keyframes searchanimate
@@ -168,6 +168,12 @@
       from {top: 305px;}
       to {top: 20px;}
     }
+  .bodyanimate {
+    animation:bodyanimate 1s;
+    moz-animation:bodyanimate 1s; /* Firefox */
+    -webkit-animation:bodyanimate 1s; /* Safari and Chrome */
+    -o-animation:bodyanimate 1s; /* Opera */
+  }
   .header-nav a {
     color: #62a696;
   }
