--- a/ngblog/app/views/admin_info_user.html
+++ b/ngblog/app/views/admin_info_user.html
@@ -24,7 +24,7 @@
 <navmenu></navmenu>
 <breadcrumbs></breadcrumbs>
 <div class="col-md-11 right-side right-box">
-  <form class="form-horizontal col-md-12" ng-submit="updateUser(user.id)">
+  <form class="form-horizontal col-md-12">
     <div class="form-group">
       <label for="name" class="col-md-1 control-label">用户名：</label>
       <div class="col-md-11">
@@ -51,10 +51,5 @@
       </div>
     </div>
     -->
-    <div class="btn-group">
-      <div class="btn-box">
-        <button type="submit" class="btn btn-lg btn-save">更新</button>
-      </div>
-    </div>
   </form>
 </div>
