--- a/ngblog/app/views/admin_users.html
+++ b/ngblog/app/views/admin_users.html
@@ -17,7 +17,7 @@
           <td>{{u.name}}</td>
           <td>{{u.email}}</td>
           <td>
-            <a class="btn btn-primary" href="#/admin/users/{{u.id}}">编辑</a>
+            <a class="btn btn-primary" href="/#/admin/users/{{u.id}}">详情</a>
             <button type="button" class="btn btn-success" ng-click="delUser(u.id)">删除</button>
           </td>
         </tr>
