--- a/ngblog/app/views/admin_new_users.html
+++ b/ngblog/app/views/admin_new_users.html
@@ -43,14 +43,12 @@
         <input type="text" class="form-control" ng-model="user.password" id="password" required>
       </div>
     </div>
-    <!--
     <div class="form-group">
       <label for="avatar" class="col-md-1 control-label">头像：</label>
       <div class="col-md-11">
-        <input type="file" id="avatar" >
+        <input type="file" id="avatar" ng-model="user.avatar">
       </div>
     </div>
-    -->
     <div class="btn-group">
       <div class="btn-box">
         <button type="submit" class="btn btn-lg btn-save">提交</button>
