--- a/ngblog/app/views/admin_info_user.html
+++ b/ngblog/app/views/admin_info_user.html
@@ -43,13 +43,15 @@
         <input type="text" class="form-control" ng-model="user.password" id="password" required>
       </div>
     </div>
-    <!--
-    <div class="form-group">
+    <div class="form-group upload-image">
       <label for="avatar" class="col-md-1 control-label">头像：</label>
       <div class="col-md-11">
-        <input type="file" id="avatar" >
+        <input type="file" nv-file-select uploader="uploader"/><br/>
+        <div class="pre-image">
+          <p>预览</p>
+          <p><img ng-src="{{user.avatar}}" alt="请上传图片" /></p>
+        </div>
       </div>
     </div>
-    -->
   </form>
 </div>
