--- a/ngblog/app/views/admin_info_user.html
+++ b/ngblog/app/views/admin_info_user.html
@@ -20,6 +20,13 @@
     color: #ffffff;
     font-size: 24px;
   }
+  .form-group img {
+    width: 50%;
+    height: 50%;
+  }
+  .last {
+    margin-bottom: 50px;
+  }
 </style>
 <navmenu></navmenu>
 <breadcrumbs></breadcrumbs>
@@ -37,20 +44,10 @@
         <input type="text" class="form-control" ng-model="user.email" id="email" required>
       </div>
     </div>
-    <div class="form-group">
-      <label for="password" class="col-md-1 control-label">密码：</label>
-      <div class="col-md-11">
-        <input type="text" class="form-control" ng-model="user.password" id="password" required>
-      </div>
-    </div>
-    <div class="form-group upload-image">
+    <div class="form-group last">
       <label for="avatar" class="col-md-1 control-label">头像：</label>
       <div class="col-md-11">
-        <input type="file" nv-file-select uploader="uploader"/><br/>
-        <div class="pre-image">
-          <p>预览</p>
-          <p><img ng-src="{{user.avatar}}" alt="请上传图片" /></p>
-        </div>
+          <img ng-src="{{user.avatar}}" alt="头像" />
       </div>
     </div>
   </form>
