--- a/ngblog/app/views/directives/nav.html
+++ b/ngblog/app/views/directives/nav.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-1 left-side left-box">
   <ul>
-    <li><img src="/images/yeoman.png" class="img-circle img-responsive"></li>
+    <li><img ng-src="{{currentUser.avatar}}" class="img-circle img-responsive"></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.postsActive];"><a href="/#/admin/posts"><span class="glyphicon glyphicon-book ng-class: {true: 'ico-acitve', false: ''}[navacitves.postsActive];"></span>所有文章</a></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.newpostActive];"><a href="/#/admin/posts/new"><span class="glyphicon glyphicon-file ng-class: {true: 'ico-acitve', false: ''}[navacitves.newpostActive];"></span>添加文章</a></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.adduserActive];"><a href="/#/admin/users/new"><span class="glyphicon glyphicon-user ng-class: {true: 'ico-acitve', false: ''}[navacitves.adduserActive];"></span>添加用户</a></li>
