--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -921,6 +921,16 @@ ul, li {
     left: 0;
     bottom: 30px;
   }
+  .password {
+    position: absolute;
+    left: 0;
+    bottom: 148px;
+  }
+  .avatar {
+    position: absolute;
+    left: 0;
+    bottom: 89px;
+  }
 }
 
 /* admin nav menu css end */
