--- a/ngblog/app/views/admin_info_user.html
+++ b/ngblog/app/views/admin_info_user.html
@@ -47,7 +47,7 @@
     <div class="form-group last">
       <label for="avatar" class="col-md-1 control-label">头像：</label>
       <div class="col-md-11">
-          <img ng-src="{{user.avatar}}" alt="头像" />
+          <img ng-src="{{user.avatar}}" alt="请上传你的头像" />
       </div>
     </div>
   </form>
