--- a/ngblog/app/views/directives/nav.html
+++ b/ngblog/app/views/directives/nav.html
@@ -6,6 +6,8 @@
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.newpostActive];"><a href="/#/admin/posts/new"><span class="glyphicon glyphicon-file ng-class: {true: 'ico-acitve', false: ''}[navacitves.newpostActive];"></span>添加文章</a></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.adduserActive];"><a href="/#/admin/users/new"><span class="glyphicon glyphicon-user ng-class: {true: 'ico-acitve', false: ''}[navacitves.adduserActive];"></span>添加用户</a></li>
     <li class="nav-item ng-class: {true: 'nav-acitves', false: ''}[navacitves.usersActive];"><a href="/#/admin/users"><span class="glyphicon glyphicon-th ng-class: {true: 'ico-acitve', false: ''}[navacitves.usersActive];"></span>用户管理</a></li>
+    <li class="password ng-class: {true: 'nav-acitves', false: ''}[navacitves.passwordActive];"><a href="/#/users/password/update"><span class="glyphicon glyphicon-edit ng-class: {true: 'ico-acitve', false: ''}[navacitves.passwordActive];"></span>修改密码</a></li>
+    <li class="avatar ng-class: {true: 'nav-acitves', false: ''}[navacitves.avatarActive];"><a href="/#/users/avatar/update"><span class="glyphicon glyphicon-picture ng-class: {true: 'ico-acitve', false: ''}[navacitves.avatarActive];"></span>修改头像</a></li>
     <li class="user-out"><a ng-click="logout()" href="javascript:void(0)"><span class="glyphicon glyphicon-share-alt"></span>退出</a></li>
   </ul>
 </div>
