--- a/ngblog/app/views/update_avatar.html
+++ b/ngblog/app/views/update_avatar.html
@@ -5,8 +5,8 @@
 }
 
 .pre-image img {
-  width: 100%;
-  heigth: 100%;
+  width: 50%;
+  heigth: 50%;
 }
 
 .btn-group {
@@ -33,9 +33,13 @@
 <div class="col-md-11 right-side right-box" style="margin-top: 50px;">
   <form class="form-horizontal col-md-12" ng-submit="updateAvatar(user.id)">
     <div class="form-group　upload-image">
-      <label for="password" class="col-md-1 control-label">密码：</label>
+      <label for="avatar" class="col-md-1 control-label">头像：</label>
       <div class="col-md-11">
-        <input type="text" class="form-control" ng-model="user.password" id="name" required>
+        <input type="file" nv-file-select uploader="uploader"/><br/>
+        <div class="pre-image">
+          <p>现头像</p>
+          <p><img ng-src="{{user.avatar}}" alt="请上传头像" /></p>
+        </div>
       </div>
     </div>
     <div class="btn-group">
